--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
     datasource:
-      url:  jdbc:mysql://127.0.0.1:3306/test
+      url:  jdbc:mysql://127.0.0.1:3306/daily
       username: root
       password: 111111
+server:
+  address: 192.168.31.208
